@@ -11,3 +11,5 @@ build/*
 *.pyc
 *.pyo 
 pip-log.txt
+*.~
+
